--- a/hero-section/styles.css
+++ b/hero-section/styles.css
@@ -271,6 +271,7 @@ html, body {
   justify-content: center;
   flex-wrap: wrap;
   background-color: black;
+  margin: 10px;
 }
 
 /* --- Bigger Card --- */
@@ -325,6 +326,7 @@ html, body {
 .process-title {
   font-size: 24px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .process-desc {
